--- a/chnword/Base.lproj/Main.storyboard
+++ b/chnword/Base.lproj/Main.storyboard
@@ -661,23 +661,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PlayBackground" translatesAutoresizingMaskIntoConstraints="NO" id="a4i-Nd-sGL">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PlayBackground" translatesAutoresizingMaskIntoConstraints="NO" id="a4i-Nd-sGL" userLabel="Background">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Player" translatesAutoresizingMaskIntoConstraints="NO" id="ctK-fU-mCt">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Player" translatesAutoresizingMaskIntoConstraints="NO" id="ctK-fU-mCt" userLabel="PlayerEmpty">
                                 <rect key="frame" x="0.0" y="4" width="600" height="532"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="ctK-fU-mCt" secondAttribute="height" multiplier="80:71" id="cO0-hb-9Pb"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cCn-Xx-4DD">
+                            <webView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wDh-bz-ZDc" userLabel="WebPlayer">
+                                <rect key="frame" x="0.0" y="45" width="600" height="450"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="wDh-bz-ZDc" secondAttribute="height" multiplier="4:3" id="lOQ-iO-wuf"/>
+                                </constraints>
+                                <dataDetectorType key="dataDetectorTypes"/>
+                            </webView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cCn-Xx-4DD" userLabel="Control">
                                 <rect key="frame" x="0.0" y="500" width="600" height="100"/>
                                 <subviews>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Pp2-0Q-ZV3">
                                         <rect key="frame" x="28" y="55" width="544" height="31"/>
                                     </slider>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lKU-rb-x7h">
-                                        <rect key="frame" x="361" y="18" width="69" height="27"/>
+                                        <rect key="frame" x="357" y="18" width="69" height="27"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <state key="normal" title="FOREWARD">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -685,7 +693,7 @@
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HUl-o4-G4w">
-                                        <rect key="frame" x="170" y="18" width="70" height="27"/>
+                                        <rect key="frame" x="173" y="18" width="70" height="27"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <state key="normal" title="BACKWARD">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -693,12 +701,15 @@
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n8D-bJ-3D4">
-                                        <rect key="frame" x="260" y="18" width="81" height="27"/>
+                                        <rect key="frame" x="263" y="18" width="74" height="27"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <state key="normal" title="PLAY / PAUSE">
+                                        <state key="normal" title="PLAY / STOP">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <action selector="playButtonPressed:" destination="Pgb-X3-0cd" eventType="touchUpInside" id="tHl-y2-XxH"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.59999999999999998" colorSpace="calibratedWhite"/>
@@ -729,6 +740,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="a4i-Nd-sGL" firstAttribute="height" secondItem="oRB-iR-rMc" secondAttribute="height" id="0ba-aZ-psa"/>
+                            <constraint firstItem="wDh-bz-ZDc" firstAttribute="centerX" secondItem="ctK-fU-mCt" secondAttribute="centerX" id="33k-im-NtP"/>
+                            <constraint firstItem="wDh-bz-ZDc" firstAttribute="width" secondItem="ctK-fU-mCt" secondAttribute="width" id="3sv-YL-adq"/>
                             <constraint firstAttribute="centerY" secondItem="a4i-Nd-sGL" secondAttribute="centerY" id="4Bo-8W-gYm"/>
                             <constraint firstItem="5Tc-ln-R9G" firstAttribute="top" secondItem="U2H-T0-XxU" secondAttribute="bottom" constant="20" id="6ze-fx-U4O"/>
                             <constraint firstAttribute="width" secondItem="cCn-Xx-4DD" secondAttribute="width" id="GVx-Ll-rfS"/>
@@ -740,9 +753,13 @@
                             <constraint firstItem="5Tc-ln-R9G" firstAttribute="leading" secondItem="oRB-iR-rMc" secondAttribute="leadingMargin" id="jPS-5T-bgw"/>
                             <constraint firstAttribute="centerX" secondItem="a4i-Nd-sGL" secondAttribute="centerX" id="n9J-vg-fu8"/>
                             <constraint firstAttribute="centerX" secondItem="ctK-fU-mCt" secondAttribute="centerX" id="uAo-b8-lgj"/>
+                            <constraint firstItem="wDh-bz-ZDc" firstAttribute="centerY" secondItem="ctK-fU-mCt" secondAttribute="centerY" id="xHn-ze-eZg"/>
                         </constraints>
                     </view>
                     <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="webPlayer" destination="wDh-bz-ZDc" id="uHa-Ia-JfO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OPx-pY-bbY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
